# Phthalo

./: .gitignore  CMakeLists.txt
Phthalo/: D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  D3D12Renderer.cpp  D3D12Renderer.h  DXSample.cpp  DXSample.h  Phthalo.slnx  Phthalo.vcxproj  Phthalo.vcxproj.filters  Win32Application.cpp  Win32Application.h  main.cpp  stdafx.h
src/: Camera.cpp  Camera.h  D3D12Renderer.cpp  D3D12Renderer.h  DXApplication.cpp  DXApplication.h  Instancer.cpp  Instancer.h  ParticleSystem.cpp  ParticleSystem.h  SphereMesh.h  Win32Application.cpp  compute.hlsl  grid_hash.hlsl  gridassign.hlsl  gridcount.hlsl  instance_shaders.hlsl  main.cpp  particles.hlsl  shaders.hlsl  stdafx.h
src/shaders/: marchingCubes.hlsl  particles.hlsl  shaders.hlsl
